<resources>
    <string name="pm_msg_loading">Loading&#8230;</string>
    <string name="pm_msg_main_server_error">An error occurred</string>
    <string name="pm_btn_scan_id">Scan</string>
    <string name="pm_btn_re_scan_id">Rescan</string>
    <string name="pm_msg_prepare_id">Please prepare your document for scan from MRZ side and click on "Scan"</string>
    <string name="pm_err_msg_permission_scan_id">Please accept all permissions to scan Document</string>
    <string name="pm_btn_ok_wipe">OK</string>
    <string name="pm_btn_cancel_wipe">Ops!</string>
    <string name="pm_msg_wipe">Do you really want to wipe your profile and all related data?</string>
    <string name="pm_login_btn_ln">Login with LinkedIn</string>
    <string name="pm_msg_no_network">No network</string>
    <string name="pm_btn_ok">OK</string>
    <string name="pm_error_msg">Error : %s</string>
    <string name="pm_error_canceled">Canceled!</string>
    <string name="pm_login_btn_fb">Connect with Facebook</string>
    <string name="pm_please_enter_a_6_digits_pin_code">Set your security PIN</string>
    <string name="pm_please_confirm_your_pin_code">Confirm your security PIN</string>
    <string name="pm_login_msg">Enter your security PIN</string>
    <string name="pm_pin_msg2">Your pin will be used to unlock your wallet.</string>
    <string name="pm_pin_confirm_title">Your pin will be used to unlock your wallet.</string>
    <string name="pm_pin_confirm_msg2">Your pin will be used to unlock your wallet.</string>
    <string name="pm_don_t_remember_your_code">Don\'t remember your code?</string>
    <string name="pm_recover_here">Recover here.</string>
    <string name="pm_register_title">Sign Up</string>
    <string name="pm_login_title">Login</string>
    <string name="pm_pin_match_error_msg">PIN Code doesn\'t match!</string>
    <string name="pm_dialog_title_login">Do you want to activate fingerprint option to unlock the app? </string>
    <string name="pm_btn_fingerprint">Activate fingerprint</string>
    <string name="pm_dialog_fingerprint_info">Fingerprint option is enabled!</string>
    <string name="pm_btn_don_t_save_code">Close</string>
    <string name="pm_position_finger_for_scan">Scan you finger</string>
    <string name="pm_err_no_fingerprint_permission">No permission for getting fingerprint</string>
    <string name="pm_err_no_saved_fingerprint">Please register fingerprint first in the system.</string>
    <string name="pm_err_no_keyguard">To use the fingerprint scanner, the system must be protected with pin or pattern</string>
    <string name="pm_btn_add_pass">Create</string>
    <string name="pm_btn_dont_add_pass">I don\'t want to</string>
    <string name="pm_message_fast_login_enabled">Fingerprint is enabled!</string>
    <string name="pm_dialog_confirm_user_title" translatable="false">Please confirm is you by scanning your finger</string>
    <string name="dialog_fast_or" translatable="false">или Парола</string>
    <string name="check_dont_ask_me_any_more" translatable="false">Не ме питай повече</string>
    <string name="hint_fast_code" translatable="false">код 4&#8211;6 числа</string>
    <string name="btn_save_code" translatable="false">Запази кода</string>
    <string name="pm_keywords_message">Please enter your keywords</string>
    <string name="pm_keywords">Keywords</string>
    <string name="pm_hint_register_keywords">keyword, keyword, keyword, keyword</string>
    <string name="pm_saved_keywords_message">To make sure, you noted down all\nkeywords correctly, we ask you to\nchoose 6 keywords of your offline key.</string>
    <string name="pm_show_keywords_title">Keywords verification</string>
    <string name="pm_keywords_select_message">Write down every keyword and\nstore them somewere safe.\nYou\'ll need them in case you forget\nyour PIN Code</string>
    <string name="pm_keywords_skip">Skip this time</string>
    <string name="pm_keywords_why">Why do I need this?</string>
    <string name="pm_keywords_save">I\'ve written it down</string>
    <string name="pm_confirmed_keywords_title">Your account has been set up</string>
    <string name="pm_keywords_confirmed_message">Start building your dossier</string>
    <string name="pm_btn_scan_id_msg">Scan your ID or Passport.</string>
    <string name="pm_btn_scan_id_msg2">Please prepare your ID or PASSPORT to scan it trough camera or NFC</string>
    <string name="pm_btn_ask_for_permission_again">OK</string>
    <string name="pm_lbl_loading_sdk">Loading&#8230;</string>
    <string name="btn_refuse_permission">Refuse</string>
    <string name="pm_err_msg_init_scan_id">SDK error init</string>
    <string name="pm_err_msg_scan_data">There was a problem with ID data extraction. Please try again!</string>
    <string name="pm_err_no_id_captured">Please capture your document</string>
    <string name="pm_id_scan_lbl">ID SCAN</string>
    <string name="pm_msg_extracting_data">Extracting&#8230;</string>
    <string name="pm_lbl_name">NAME</string>
    <string name="pm_lbl_dob">DATE OF BIRTH</string>
    <string name="pm_lbl_pob">PLACE OF BIRTH</string>
    <string name="pm_lbl_mail">EMAIL</string>
    <string name="pm_lbl_phone">PHONE</string>
    <string name="pm_btn_selfie">Take a selfie</string>
    <string name="pm_lbl_selfie">Take a live selfie to continue</string>
    <string name="pm_lbl_fb">FACEBOOK ACCOUNT</string>
    <string name="pm_lbl_ln">LINKEDIN ACCOUNT</string>
    <string name="pm_register_btn_connect">Connect</string>
    <string name="pm_register_btn_disconnect">Disconnect</string>
    <string name="pm_lbl_confirm_title">Congratulations!</string>
    <string name="pm_lbl_confirm_msg">Your identity\nhas been verified.</string>
    <string name="pm_err_no_liveselfie_created">Please make a live selfie to finish your registration</string>
    <string name="pm_msg_verify">Verifying&#8230;</string>
    <string name="pm_title_home">Home</string>
    <string name="pm_title_application">Application</string>
    <string name="pm_tab_home_activity">ACTIVITY</string>
    <string name="pm_tab_home_information">INFORMATION</string>
    <string name="pm_job_item_btn1_title">Personal Profile</string>
    <string name="pm_job_item_btn1_msg">ID, Passport</string>
    <string name="pm_job_item_btn2_title">Work Details</string>
    <string name="pm_job_item_btn2_msg">Employment Contact</string>
    <string name="pm_job_item_btn3_title">Income Details</string>
    <string name="pm_job_item_btn3_msg">Tax Returns</string>
    <string name="pm_job_item_btn4_title">Other Details</string>
    <string name="pm_job_item_btn4_msg">Other Information</string>
    <string name="pm_menu_home">Home</string>
    <string name="pm_menu_documents">Documents</string>
    <string name="pm_menu_contacts">Contacts</string>
    <string name="pm_menu_settings">Settings</string>
    <string name="pm_profile_settings_title">Profile</string>
    <string name="pm_other_profile_settings_title">Contact Details</string>
    <string name="pm_tab_profile_general">GENERAL</string>
    <string name="pm_tab_profile_social">SOCIAL</string>
    <string name="pm_profile_settings_lbl_name">Full Name</string>
    <string name="pm_profile_settings_lbl_dob">Date of Birth</string>
    <string name="pm_profile_settings_lbl_pob">Place of birth</string>
    <string name="pm_profile_settings_lbl_mail">Email</string>
    <string name="pm_profile_settings_lbl_phone">Phone</string>
    <string name="pm_profile_settings_lbl_fb">Facebook</string>
    <string name="pm_profile_settings_lbl_ln">Linkedin</string>
    <string name="pm_profile_settings_lbl_g">Google</string>
    <string name="pm_settings_add_to_contacts">ADD TO CONTACTS</string>
    <string name="pm_settings_remove_from_contacts">REMOVE FROM CONTACTS</string>
    <string name="pm_contact_btn_not_validated">Cross Validate</string>
    <string name="pm_contact_btn_validated">Validated</string>
    <string name="pm_title_documents">Documents</string>
    <string name="pm_document_item_empty">Add new file</string>
    <string name="pm_add_new_file_from_card">Add</string>
    <string name="pm_documents_item_btn_update">Update</string>
    <string name="pm_documents_item_btn_remove">Remove</string>
    <string name="pm_upload_doc_menu">Upload Doc.</string>
    <string name="pm_scan_id_menu">Scan ID</string>
    <string name="pm_title_contacts">Contacts</string>
    <string name="pm_tuto1_title">Peermountain is secure.</string>
    <string name="pm_tuto2_title">Peermountain is …</string>
    <string name="pm_tuto3_title">You control your dossier.</string>
    <string name="pm_tuto1_msg">You can apply to millions of offers from\n\nworldwide leaders invarious markets with\n\njust one click.</string>
    <string name="pm_tuto2_msg">You can build a personal dossier and be in\n\ncontrol of how and with whom you\'re\n\nsharing it.</string>
    <string name="pm_tuto3_msg">You can build a personal dossier and be in\n\ncontrol of how and with whom you\'re\n\nsharing it.</string>
    <string name="pm_tuto1_msg2">Just scan the code to apply.</string>
    <string name="pm_tuto2_msg2">You set the trust and sharing levels.</string>
    <string name="pm_tuto3_msg2">You set the trust and sharing levels.</string>
    <string name="pm_tuto_next">NEXT</string>
    <string name="pm_tuto_skip">SKIP</string>
    <string name="pm_tuto_start">Start</string>
    <string name="pm_ad_title">SWISS MILES &amp; MORE CLASSIC CARD DUO</string>
    <string name="pm_ad_msg">In the 1st year CHF 60- instead of CHF 120\nannual fee as of 2nd year.\nAs a welcome gift I will receive 20,000 award miles instead of 2,000.\n\n\nThe annual interest is 12%</string>
    <string name="pm_ad_get_the_card">Get the card</string>
    <string name="pm_btn_agree">Agree</string>
    <string name="pm_security_tutorial_title_1">Screenshots are not secure.</string>
    <string name="pm_security_tutorial_title_2">Are you being watched?</string>
    <string name="pm_security_tutorial_title_3">No backup. No profile.</string>
    <string name="pm_security_tutorial_msg1_1">If you take a screenshot, your backup may be viewed by other apps. You can make a safe backup with physical paper and pen.</string>
    <string name="pm_security_tutorial_msg1_2">Now is the perfect time to assess your surroundings. Nearby windows? Hidden cameras? Shoulder - spies?</string>
    <string name="pm_security_tutorial_msg1_3">Since only you control your profile, you’ll need to save your backup phrase in case this app is deleted.</string>
    <string name="pm_security_tutorial_msg2_1"></string>
    <string name="pm_security_tutorial_msg2_2">Anyone with your backupphrase can access and use your dossier.</string>
    <string name="pm_security_tutorial_msg2_3">Your profile is never saved to the cloud storage or standard device backup.</string>
    <string name="pm_security_tutorial_next_1">I understand</string>
    <string name="pm_security_tutorial_next_2">Got it</string>
    <string name="pm_security_tutorial_next_3">I understand</string>
    <string name="pm_job_finished">You completed your application!\nThe authentication should only take a moment...</string>
    <string name="pm_share_using_google_nearby">Using Google NearBy</string>
    <string name="pm_share_using_qr_code">Using QR Code</string>
    <string name="pm_share_title">Add contact</string>
    <string name="pm_msg_form_saved">Saved!</string>
    <string name="pm_msg_form_saved_and_send">Saved and send!</string>
</resources>