<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pm_fingerprint_dialog_bkg"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/pm_margin_big">

    <TextView
        android:id="@+id/tvTitleFastDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pm_dialog_title_login"
        android:textColor="@color/pm_fingerprint_dialog_text_color"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvFingerBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:background="@drawable/pm_square_border"
        android:drawableTop="@drawable/pm_ic_fingerprint_30dp"
        android:padding="12dp"
        android:textColor="@color/pm_fingerprint_dialog_text_color"
        android:text="@string/pm_btn_fingerprint"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/dialog_fast_or"
        android:textSize="16sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/etFastCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:hint="@string/hint_fast_code"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvCodeBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/pm_square_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/btn_save_code"
        android:textColor="@color/pm_fingerprint_dialog_text_color"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/cbDontAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:hint="@string/check_dont_ask_me_any_more"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNoFastLoginBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/pm_square_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/pm_btn_don_t_save_code"
        android:textColor="@color/pm_fingerprint_dialog_text_color"/>
</LinearLayout>
